exports[`test the manage button handling an onclick event 1`] = `
<li
  className="jTXCtM">
  <img
    alt=""
    className="khsQCf"
    src="" />
  <span
    className="inBLcU">
    yoast.com
  </span>
  <span
    className="htaPbW">
    <div>
      <span
        aria-label="Yoast SEO is inactive"
        className="hGymDt"
        role="img" />
      <span
        aria-label="Local SEO is inactive"
        className="kswMOV"
        role="img" />
      <span
        aria-label="Video SEO is active"
        className="jzGgcX"
        role="img" />
      <span
        aria-label="News SEO is inactive"
        className="kdRmgg"
        role="img" />
      <span
        aria-label="WooCommerce SEO is active"
        className="gKxAXd"
        role="img" />
      <span
        aria-label="Local SEO for Woo is inactive"
        className="egmryf"
        role="img" />
    </div>
  </span>
  <button
    className="kTxWZ"
    onClick={[Function]}
    type="button">
    Manage
  </button>
</li>
`;

exports[`test the manage button handling an onclick event 2`] = `
<li
  className="jTXCtM">
  <img
    alt=""
    className="khsQCf"
    src="" />
  <span
    className="inBLcU">
    yoast.com
  </span>
  <span
    className="htaPbW">
    <div>
      <span
        aria-label="Yoast SEO is inactive"
        className="hGymDt"
        role="img" />
      <span
        aria-label="Local SEO is inactive"
        className="kswMOV"
        role="img" />
      <span
        aria-label="Video SEO is active"
        className="jzGgcX"
        role="img" />
      <span
        aria-label="News SEO is inactive"
        className="kdRmgg"
        role="img" />
      <span
        aria-label="WooCommerce SEO is active"
        className="gKxAXd"
        role="img" />
      <span
        aria-label="Local SEO for Woo is inactive"
        className="egmryf"
        role="img" />
    </div>
  </span>
  <button
    className="kTxWZ"
    onClick={[Function]}
    type="button">
    Manage
  </button>
</li>
`;

exports[`test the site component matches the snapshot 1`] = `
<li
  className="jTXCtM">
  <img
    alt=""
    className="khsQCf"
    src="" />
  <span
    className="inBLcU">
    yoast.com
  </span>
  <span
    className="htaPbW">
    <div>
      <span
        aria-label="Yoast SEO is inactive"
        className="hGymDt"
        role="img" />
      <span
        aria-label="Local SEO is inactive"
        className="kswMOV"
        role="img" />
      <span
        aria-label="Video SEO is active"
        className="jzGgcX"
        role="img" />
      <span
        aria-label="News SEO is inactive"
        className="kdRmgg"
        role="img" />
      <span
        aria-label="WooCommerce SEO is active"
        className="gKxAXd"
        role="img" />
      <span
        aria-label="Local SEO for Woo is inactive"
        className="egmryf"
        role="img" />
    </div>
  </span>
  <button
    className="kTxWZ"
    onClick={undefined}
    type="button">
    Manage
  </button>
</li>
`;
